# local-flow

./: .gitignore  README.md  build.sh  config.py  main.py  pyproject.toml  run.sh  server.py
.cursor/rules/: README-maintenance.mdc  build-check.mdc  documentation-updates.mdc
LocalFlowApp/: LocalFlowApp.entitlements  Package.swift  README.md  project.yml
LocalFlowApp/LocalFlow.xcodeproj/: project.pbxproj
LocalFlowApp/LocalFlowApp/: Info.plist  LocalFlowApp.swift
LocalFlowApp/LocalFlowApp/Models/: DataModels.swift
LocalFlowApp/LocalFlowApp/Services/: BackendServerManager.swift  BackendService.swift  NotificationService.swift  WebSocketService.swift
LocalFlowApp/LocalFlowApp/Views/: ModelManagerView.swift  PreferencesView.swift  RecordingOverlayView.swift
backend/: config.py
backend/engine/: __init__.py  audio.py  vad.py
docs/: api-reference.md  architecture.md  configuration.md  development.md  technical-details.md  user-guide.md
engine/: audio.py  injector.py  transcriber.py
scripts/: build.sh  run-backend.sh
ui/: __init__.py  overlay.py  settings.py
